Replace deprecated Double/Integer constructors
Replaces usages of deprecated Double and Integer constructors with valueOf methods across multiple files for improved code modernization and to avoid deprecation warnings. Also adds @SuppressWarnings("deprecation") to JWildfireApplet and JWildfire classes.